--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -475,7 +475,7 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="144" y="333" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="BCA70907-734A-4A6C-B364-FDD34CA61D1E" colorSpace="pattern"/>
+                                <color key="color" patternImage="44248BFD-2D34-4B61-A7DE-50B1C72943D5" colorSpace="pattern"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -531,7 +531,7 @@
         <!--Finding Crew View Controller-->
         <scene sceneID="3uT-tg-mP0">
             <objects>
-                <viewController id="ddu-Zc-dJg" customClass="FindingCrewViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FindingCrewViewController" id="ddu-Zc-dJg" customClass="FindingCrewViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="iCa-oa-ZQs"/>
                         <viewControllerLayoutGuide type="bottom" id="iC9-AK-KYH"/>
@@ -613,7 +613,7 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                 <rect key="frame" x="142" y="30" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="3F3B2D80-9661-4080-93DE-8AEF649AFD89" colorSpace="pattern"/>
+                                <color key="color" patternImage="ACE3DAE1-A652-4CC0-A27F-E47D20A6F7E7" colorSpace="pattern"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -638,7 +638,7 @@
         <!--Meet Crew View Controller - Meet Your Crew-->
         <scene sceneID="uD3-8c-8Uz">
             <objects>
-                <viewController title="Meet Your Crew" id="adg-RW-m0r" customClass="MeetCrewViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MeetCrewViewController" title="Meet Your Crew" id="adg-RW-m0r" customClass="MeetCrewViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="cao-yj-Z3c"/>
                         <viewControllerLayoutGuide type="bottom" id="GMx-o5-dNj"/>
@@ -831,7 +831,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="3F3B2D80-9661-4080-93DE-8AEF649AFD89" width="320" height="460">
+        <image name="44248BFD-2D34-4B61-A7DE-50B1C72943D5" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -10718,7 +10718,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="BCA70907-734A-4A6C-B364-FDD34CA61D1E" width="320" height="460">
+        <image name="ACE3DAE1-A652-4CC0-A27F-E47D20A6F7E7" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
