--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Qe4-4s-UEE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Qe4-4s-UEE">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -476,7 +476,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="144" y="333" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="AD58BF44-0EEB-4358-A6AA-687AC305CE2D" colorSpace="pattern"/>
+                                <color key="color" patternImage="63F6D7EA-8F55-49F8-ACEB-3E7DF41F3B7D" colorSpace="pattern"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -614,7 +614,7 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                 <rect key="frame" x="142" y="30" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="70DB0038-11A0-4932-9AEA-AE58FDC90B85" colorSpace="pattern"/>
+                                <color key="color" patternImage="ACF21603-E719-4199-91F5-3CBBAE36860B" colorSpace="pattern"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -797,9 +797,11 @@
                     <connections>
                         <outlet property="cancelButton" destination="wbI-CF-6jc" id="9w2-wf-C72"/>
                         <outlet property="countDownTimer" destination="tgI-pd-3os" id="l02-Fs-bh5"/>
+                        <outlet property="designationLabel" destination="h9f-xG-jNI" id="4dT-Fa-4FB"/>
                         <outlet property="imageView1" destination="7oM-Fj-rnD" id="yz4-0E-3zc"/>
                         <outlet property="imageView2" destination="Z5h-71-TdY" id="ppi-ts-X9D"/>
                         <outlet property="imageView3" destination="Pbp-PP-ETC" id="pNr-DA-7kd"/>
+                        <outlet property="instructionsLabel" destination="iYW-6K-YxY" id="DZH-hf-IoP"/>
                         <outlet property="mapView" destination="tgW-3p-ARV" id="iBc-sC-td3"/>
                         <outlet property="nameLabel1" destination="HdJ-nX-eLV" id="Rpf-u0-yDm"/>
                         <outlet property="nameLabel2" destination="afP-PJ-LW9" id="cDw-yq-NPq"/>
@@ -813,7 +815,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="70DB0038-11A0-4932-9AEA-AE58FDC90B85" width="320" height="460">
+        <image name="63F6D7EA-8F55-49F8-ACEB-3E7DF41F3B7D" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -10700,7 +10702,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="AD58BF44-0EEB-4358-A6AA-687AC305CE2D" width="320" height="460">
+        <image name="ACF21603-E719-4199-91F5-3CBBAE36860B" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
